--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/media-query.css">
     <style>
 
     </style>
@@ -18,7 +19,7 @@
 
 <body>
 
-    <section class="gift--box-section">
+    <section class="gift-box-section">
         <h1 class="fw-bold my-3" style="color: dodgerblue;" id="giftBoxHeading"></h1>
 
         <div class="gift-box-container">
@@ -40,15 +41,81 @@
         </div>
     </section>
 
-    <section class="hidden" id="giftBoxContent">
-        
+    <section class="gift-box-hidden-content gift-box-content-container stars" id="giftBoxContent">
+        <div class="gift-box-content-body">
+            <div class="image-box">
+                <!-- <h1 class="text-center title">Happy Birthday</h1> -->
+                <span style="--i:1;"><img id="image-1" src="assets/plugins/flowers/images/1.jpg" alt="image-1"></span>
+                <span style="--i:2;"><img id="image-2" src="assets/plugins/flowers/images/2.jpg" alt="image-2"></span>
+                <span style="--i:3;"><img id="image-3" src="assets/plugins/flowers/images/3.jpg" alt="image-3"></span>
+                <span style="--i:4;"><img id="image-4" src="assets/plugins/flowers/images/4.jpg" alt="image-4"></span>
+                <span style="--i:5;"><img id="image-5" src="assets/plugins/flowers/images/5.jpg" alt="image-5"></span>
+                <span style="--i:6;"><img id="image-6" src="assets/plugins/flowers/images/6.jpg" alt="image-6"></span>
+                <span style="--i:7;"><img id="image-7" src="assets/plugins/flowers/images/7.jpg" alt="image-7"></span>
+                <span style="--i:8;"><img id="image-8" src="assets/plugins/flowers/images/8.jpg" alt="image-8"></span>
+            </div>
+
+            <div class="heart-container-top-left">
+                <div class="heart-top-left">
+                    <div class="heart-glow-top-left"></div>
+                </div>
+            </div>
+
+            <div class="heart-container-bottom-right">
+                <div class="heart-bottom-right">
+                    <div class="heart-glow-bottom-right"></div>
+                </div>
+            </div>
+
+            <div class="gift-box-content-top-left-title-container">
+                <h2 class="gift-box-content-title">
+                    <span class="gift-box-content-title-span" style="--i:101;">H</span>
+                    <span class="gift-box-content-title-span" style="--i:102;">A</span>
+                    <span class="gift-box-content-title-span" style="--i:103;">P</span>
+                    <span class="gift-box-content-title-span" style="--i:104;">P</span>
+                    <span class="gift-box-content-title-span" style="--i:105;">Y</span>
+
+                </h2>
+                <h2 class="gift-box-content-title">
+                    <span class="gift-box-content-title-span" style="--i:106;margin-left: 1vw;">B</span>
+                    <span class="gift-box-content-title-span" style="--i:107;">I</span>
+                    <span class="gift-box-content-title-span" style="--i:108;">R</span>
+                    <span class="gift-box-content-title-span" style="--i:109;">T</span>
+                    <span class="gift-box-content-title-span" style="--i:110;">H</span>
+                    <span class="gift-box-content-title-span" style="--i:111;">D</span>
+                    <span class="gift-box-content-title-span" style="--i:112;">A</span>
+                    <span class="gift-box-content-title-span" style="--i:113;">Y</span>
+                    <span class="gift-box-content-title-span" style="--i:114;margin-left: 2vw;">
+                        <i class="bi bi-cake2"></i>
+                    </span>
+                </h2>
+            </div>
+
+            <div class="gift-box-content-bottom-right-title-container">
+                <h2 class="gift-box-content-title">
+                    <span class="gift-box-content-title-span" style="--i:101;">M</span>
+                    <span class="gift-box-content-title-span" style="--i:102;">Y</span>
+                    <span class="gift-box-content-title-span" style="--i:103;margin-left: 4vw;">D</span>
+                    <span class="gift-box-content-title-span" style="--i:104;">E</span>
+                    <span class="gift-box-content-title-span" style="--i:105;">A</span>
+                    <span class="gift-box-content-title-span" style="--i:106;">R</span>
+
+                </h2>
+                <h2 class="gift-box-content-title">
+                    <span class="gift-box-content-title-span" style="--i:107;margin-left: 2vw;">F</span>
+                    <span class="gift-box-content-title-span" style="--i:108;">R</span>
+                    <span class="gift-box-content-title-span" style="--i:109;">I</span>
+                    <span class="gift-box-content-title-span" style="--i:110;">E</span>
+                    <span class="gift-box-content-title-span" style="--i:111;">N</span>
+                    <span class="gift-box-content-title-span" style="--i:112;">D</span>
+                    <span class="gift-box-content-title-span" style="--i:113;">!</span>
+                </h2>
+            </div>
+        </div>
     </section>
 
+    <script></script>
 
-    </div>
-    <script>
-
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
