--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
         <div class="gift-box-content-body">
             <div class="image-box">
                 <!-- <h1 class="text-center title">Happy Birthday</h1> -->
-                <span style="--i:1;"><img id="image-1" src="assets/plugins/flowers/images/1.jpg" alt="image-1"></span>
-                <span style="--i:2;"><img id="image-2" src="assets/plugins/flowers/images/2.jpg" alt="image-2"></span>
-                <span style="--i:3;"><img id="image-3" src="assets/plugins/flowers/images/3.jpg" alt="image-3"></span>
-                <span style="--i:4;"><img id="image-4" src="assets/plugins/flowers/images/4.jpg" alt="image-4"></span>
-                <span style="--i:5;"><img id="image-5" src="assets/plugins/flowers/images/5.jpg" alt="image-5"></span>
-                <span style="--i:6;"><img id="image-6" src="assets/plugins/flowers/images/6.jpg" alt="image-6"></span>
-                <span style="--i:7;"><img id="image-7" src="assets/plugins/flowers/images/7.jpg" alt="image-7"></span>
-                <span style="--i:8;"><img id="image-8" src="assets/plugins/flowers/images/8.jpg" alt="image-8"></span>
+                <span style="--i:1;"><img id="image-1" src="" alt="image-1"></span>
+                <span style="--i:2;"><img id="image-2" src="" alt="image-2"></span>
+                <span style="--i:3;"><img id="image-3" src="" alt="image-3"></span>
+                <span style="--i:4;"><img id="image-4" src="" alt="image-4"></span>
+                <span style="--i:5;"><img id="image-5" src="" alt="image-5"></span>
+                <span style="--i:6;"><img id="image-6" src="" alt="image-6"></span>
+                <span style="--i:7;"><img id="image-7" src="" alt="image-7"></span>
+                <span style="--i:8;"><img id="image-8" src="" alt="image-8"></span>
             </div>
 
             <div class="heart-container-top-left">
