--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
     <section class="gift-box-section">
-        <h1 class="fw-bold my-3" style="color: dodgerblue;" id="giftBoxHeading"></h1>
+        <h1 class="fw-bold my-4 gift-box-heading" id="giftBoxHeading"></h1>
 
         <div class="gift-box-container">
             <div class="gift-box-shadow"></div>
