--- a/index4.html
+++ b/index4.html
@@ -88,7 +88,7 @@
                     <img src="assets/plugins/default/images/image-2.jpg">
                 </div>
             </div>
-            <!-- <div class="swiper-pagination"></div> -->
+            <div class="swiper-pagination"></div>
         </div>
     </div>
 
@@ -117,13 +117,13 @@
                 modifier: 1,
                 slideShadows: false,
             },
-            // pagination: {
-            //     el: ".swiper-pagination",
-            // },
+            pagination: {
+                el: ".swiper-pagination",
+            },
             initialSlide: 2, // Start from the second image
             loop: true, // Loop through the images
             autoplay: {
-                delay: 2500, // Delay between slides in milliseconds
+                delay: 2000, // Delay between slides in milliseconds
                 disableOnInteraction: false, // Enable/disable autoplay on slide interaction
             },
         });
