--- a/index4.html
+++ b/index4.html
@@ -13,20 +13,23 @@
     <!-- <link rel="stylesheet" href="assets/css/style4.css"> -->
     <!-- <link rel="stylesheet" href="assets/css/media-query.css"> -->
     <style>
-        html,
+        body{
+            background-color: black;
+        }
+        /* html,
         body {
             position: relative;
-            /* height: 100%; */
-        }
+            height: 100%;
+        } */
 
-        body {
+        /* body {
             background: black;
             font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
             font-size: 14px;
             color: #000;
             margin: 0;
             padding: 0;
-        }
+        } */
 
         .swiper {
             width: 100%;
@@ -37,7 +40,8 @@
         .swiper-slide {
             background-position: center;
             background-size: cover;
-            width: 300px;
+            /* width: 300px; */
+            width: 250px;
             /* height: 300px; */
             height: auto;
         }
@@ -50,41 +54,46 @@
             box-shadow: inset 0 0 15px rgba(0,0,0,0.9);
             border: 2px solid #0ff;
         }
+        .image-section{
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+            border: 6px solid black;
+            border-radius: 10px;
+        }
     </style>
 </head>
 
 <body>
 
-    <div class="main-section my-5 py-5 mx-3 mx-md-5 px-3 px-md-5 bg-body rounded-4 
+    <div class="main-section my-5 py-2 mx-3 mx-md-5 px-0 px-md-5 bg-body rounded-4 
         position-relative">
 
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-2.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-3.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-5.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-6.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-2.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-3.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-5.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-6.jpg">
                 </div>
-                <div class="swiper-slide">
+                <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-2.jpg">
                 </div>
             </div>
