--- a/index4.html
+++ b/index4.html
@@ -10,55 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <!-- <link rel="stylesheet" href="assets/css/style4.css"> -->
+    <link rel="stylesheet" href="assets/css/style4.css">
     <!-- <link rel="stylesheet" href="assets/css/media-query.css"> -->
     <style>
-        body{
-            background-color: black;
-        }
-        /* html,
-        body {
-            position: relative;
-            height: 100%;
-        } */
-
-        /* body {
-            background: black;
-            font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-            font-size: 14px;
-            color: #000;
-            margin: 0;
-            padding: 0;
-        } */
-
-        .swiper {
-            width: 100%;
-            padding-top: 50px;
-            padding-bottom: 50px;
-        }
-
-        .swiper-slide {
-            background-position: center;
-            background-size: cover;
-            /* width: 300px; */
-            width: 250px;
-            /* height: 300px; */
-            height: auto;
-        }
-
-        .swiper-slide img {
-            display: block;
-            width: 100%;
-        }
-        .main-section{
-            box-shadow: inset 0 0 15px rgba(0,0,0,0.9);
-            border: 2px solid #0ff;
-        }
-        .image-section{
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-            border: 6px solid black;
-            border-radius: 10px;
-        }
+        
     </style>
 </head>
 
@@ -99,6 +54,45 @@
             </div>
             <div class="swiper-pagination"></div>
         </div>
+    </div>
+
+    <div class="gift-box-content-top-left-title-container">
+        <h2 class="gift-box-content-title">
+            <span class="gift-box-content-title-span" style="--i:1;">H</span>
+            <span class="gift-box-content-title-span" style="--i:2;">A</span>
+            <span class="gift-box-content-title-span" style="--i:3;">P</span>
+            <span class="gift-box-content-title-span" style="--i:4;">P</span>
+            <span class="gift-box-content-title-span" style="--i:5;">Y</span>
+            <span class="gift-box-content-title-span" style="--i:6;margin-left: 3vw;">B</span>
+            <span class="gift-box-content-title-span" style="--i:7;">I</span>
+            <span class="gift-box-content-title-span" style="--i:8;">R</span>
+            <span class="gift-box-content-title-span" style="--i:9;">T</span>
+            <span class="gift-box-content-title-span" style="--i:10;">H</span>
+            <span class="gift-box-content-title-span" style="--i:11;">D</span>
+            <span class="gift-box-content-title-span" style="--i:12;">A</span>
+            <span class="gift-box-content-title-span" style="--i:13;">Y</span>
+
+        </h2>
+        <h2 class="gift-box-content-title">
+            <span class="gift-box-content-title-span" style="--i:14;">
+                <i class="bi bi-cake2"></i>
+            </span>
+        </h2>
+        <h2 class="gift-box-content-title">
+            <span class="gift-box-content-title-span" style="--i:15;">M</span>
+            <span class="gift-box-content-title-span" style="--i:16;">Y</span>
+            <span class="gift-box-content-title-span" style="--i:17;margin-left: 2vw;">D</span>
+            <span class="gift-box-content-title-span" style="--i:18;">E</span>
+            <span class="gift-box-content-title-span" style="--i:19;">A</span>
+            <span class="gift-box-content-title-span" style="--i:20;">R</span>
+            <span class="gift-box-content-title-span" style="--i:21;margin-left: 2vw;">F</span>
+            <span class="gift-box-content-title-span" style="--i:22;">R</span>
+            <span class="gift-box-content-title-span" style="--i:23;">I</span>
+            <span class="gift-box-content-title-span" style="--i:24;">E</span>
+            <span class="gift-box-content-title-span" style="--i:25;">N</span>
+            <span class="gift-box-content-title-span" style="--i:26;">D</span>
+            <span class="gift-box-content-title-span" style="--i:27;">!</span>
+        </h2>
     </div>
 
 
