--- a/index4.html
+++ b/index4.html
@@ -10,10 +10,116 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/css/style4.css">
+    <!-- <link rel="stylesheet" href="assets/css/style4.css"> -->
     <!-- <link rel="stylesheet" href="assets/css/media-query.css"> -->
     <style>
-        
+        body {
+            background-color: black;
+        }
+
+        /* html,
+body {
+    position: relative;
+    height: 100%;
+} */
+
+        /* body {
+    background: black;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #000;
+    margin: 0;
+    padding: 0;
+} */
+
+        .swiper {
+            width: 100%;
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+
+        .swiper-slide {
+            background-position: center;
+            background-size: cover;
+            /* width: 300px; */
+            width: 250px;
+            /* height: 300px; */
+            height: auto;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+        }
+
+        .main-section {
+            box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.9);
+            border: 2px solid #0ff;
+        }
+
+        .image-section {
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+            border: 6px solid black;
+            border-radius: 10px;
+        }
+
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+
+
+        .gift-box-content-title {
+            display: flex;
+            justify-content: center;
+            color: transparent;
+            font-size: 4vw;
+            font-family: monospace;
+            font-family: "Bad Script", cursive;
+        }
+
+        .gift-box-content-title-span {
+            animation: ColorAnimate 3s linear infinite;
+            animation-delay: calc(0.1s * var(--i));
+        }
+
+        @keyframes ColorAnimate {
+            0% {
+                color: #fff;
+                filter: blur(2px) hue-rotate(0deg);
+                text-shadow: 0 0 10px dodgerblue,
+                    0 0 20px dodgerblue,
+                    0 0 40px dodgerblue,
+                    0 0 80px dodgerblue,
+                    0 0 120px dodgerblue,
+                    0 0 200px dodgerblue,
+                    0 0 300px dodgerblue,
+                    0 0 400px dodgerblue;
+            }
+
+            30%,
+            70% {
+                color: #fff;
+                filter: blur(2px) hue-rotate(360deg);
+                text-shadow: 0 0 10px dodgerblue,
+                    0 0 20px dodgerblue,
+                    0 0 40px dodgerblue,
+                    0 0 80px dodgerblue,
+                    0 0 120px dodgerblue,
+                    0 0 200px dodgerblue,
+                    0 0 300px dodgerblue,
+                    0 0 400px dodgerblue;
+            }
+
+            100% {
+                color: transparent;
+                box-shadow: none;
+                filter: blur(2px) hue-rotate(0deg);
+            }
+        }
     </style>
 </head>
 
