--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style1.css">
     <link rel="stylesheet" href="assets/css/media-query.css">
     <style>
         /*  */
@@ -36,12 +36,7 @@
                     <span class="gift-box-text-typing-animation m-0 p-0" id="giftBoxTextTypingAnimation"></span>
                     <span class="blink-span m-0"></span>
                 </h3 class="m-0 p-0">
-                <h3 class="my-3 gift-btn active">
-                    <a class="btn btn-info gift-btn-animation" href="#" role="button">
-                        <span class="h4">Click For Next Gift</span>
-                    </a>
-                </h3>
-                <!-- <h2 class="gift-box-countdown blink" id="giftBoxCountdown"></h2> -->
+                <h2 class="gift-box-countdown blink" id="giftBoxCountdown"></h2>
             </div>
         </div>
     </section>
@@ -76,7 +71,62 @@
                 </span>
             </div>
 
-            
+            <div class="heart-container-top-left">
+                <div class="heart-top-left">
+                    <div class="heart-glow-top-left"></div>
+                </div>
+            </div>
+
+            <div class="heart-container-bottom-right">
+                <div class="heart-bottom-right">
+                    <div class="heart-glow-bottom-right"></div>
+                </div>
+            </div>
+
+            <div class="gift-box-content-top-left-title-container">
+                <h2 class="gift-box-content-title">
+                    <span class="gift-box-content-title-span" style="--i:101;">H</span>
+                    <span class="gift-box-content-title-span" style="--i:102;">A</span>
+                    <span class="gift-box-content-title-span" style="--i:103;">P</span>
+                    <span class="gift-box-content-title-span" style="--i:104;">P</span>
+                    <span class="gift-box-content-title-span" style="--i:105;">Y</span>
+
+                </h2>
+                <h2 class="gift-box-content-title">
+                    <span class="gift-box-content-title-span" style="--i:106;margin-left: 1vw;">B</span>
+                    <span class="gift-box-content-title-span" style="--i:107;">I</span>
+                    <span class="gift-box-content-title-span" style="--i:108;">R</span>
+                    <span class="gift-box-content-title-span" style="--i:109;">T</span>
+                    <span class="gift-box-content-title-span" style="--i:110;">H</span>
+                    <span class="gift-box-content-title-span" style="--i:111;">D</span>
+                    <span class="gift-box-content-title-span" style="--i:112;">A</span>
+                    <span class="gift-box-content-title-span" style="--i:113;">Y</span>
+                    <span class="gift-box-content-title-span" style="--i:114;margin-left: 2vw;">
+                        <i class="bi bi-cake2"></i>
+                    </span>
+                </h2>
+            </div>
+
+            <div class="gift-box-content-bottom-right-title-container">
+                <h2 class="gift-box-content-title">
+                    <span class="gift-box-content-title-span" style="--i:101;">M</span>
+                    <span class="gift-box-content-title-span" style="--i:102;">Y</span>
+                    <span class="gift-box-content-title-span" style="--i:103;margin-left: 4vw;">D</span>
+                    <span class="gift-box-content-title-span" style="--i:104;">E</span>
+                    <span class="gift-box-content-title-span" style="--i:105;">A</span>
+                    <span class="gift-box-content-title-span" style="--i:106;">R</span>
+
+                </h2>
+                <h2 class="gift-box-content-title">
+                    <span class="gift-box-content-title-span" style="--i:107;margin-left: 2vw;">F</span>
+                    <span class="gift-box-content-title-span" style="--i:108;">R</span>
+                    <span class="gift-box-content-title-span" style="--i:109;">I</span>
+                    <span class="gift-box-content-title-span" style="--i:110;">E</span>
+                    <span class="gift-box-content-title-span" style="--i:111;">N</span>
+                    <span class="gift-box-content-title-span" style="--i:112;">D</span>
+                    <span class="gift-box-content-title-span" style="--i:113;">!</span>
+                </h2>
+            </div>
         </div>
     </section>
 
