--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media-query.css">
-    <style>
-        /*  */
-    </style>
 </head>
 
 <body>
@@ -27,9 +25,6 @@
             <div class="gift-box-body">
                 <div class="gift-box-cap" id="giftBoxCap">
                 </div>
-                <!-- <div class="click2" id="">
-                </div> -->
-
             </div>
             <div class="gift-box-text-body m-0 p-0">
                 <h3 class="m-0 px-4 py-2">
@@ -37,46 +32,11 @@
                     <span class="blink-span m-0"></span>
                 </h3 class="m-0 p-0">
                 <h3 class="my-3 gift-btn active">
-                    <a class="btn btn-info gift-btn-animation" href="#" role="button">
+                    <a class="btn btn-info gift-btn-animation" href="#" role="button" id="giftBtnId">
                         <span class="h4">Click For Next Gift</span>
                     </a>
                 </h3>
-                <!-- <h2 class="gift-box-countdown blink" id="giftBoxCountdown"></h2> -->
             </div>
-        </div>
-    </section>
-
-    <section class="gift-box-hidden-content gift-box-content-container stars" id="giftBoxContent">
-        <div class="gift-box-content-body">
-            <div class="image-box">
-                <!-- <h1 class="text-center title">Happy Birthday</h1> -->
-                <span style="--i:1;">
-                    <img id="image-1" src="" onerror="this.src='assets/plugins/default/images/image-1.jpg';" alt="image-1">
-                </span>
-                <span style="--i:2;">
-                    <img id="image-2" src="" onerror="this.src='assets/plugins/default/images/image-2.jpg';" alt="image-2">
-                </span>
-                <span style="--i:3;">
-                    <img id="image-3" src="" onerror="this.src='assets/plugins/default/images/image-3.jpg';" alt="image-3">
-                </span>
-                <span style="--i:4;">
-                    <img id="image-4" src="" onerror="this.src='assets/plugins/default/images/image-4.jpg';" alt="image-4">
-                </span>
-                <span style="--i:5;">
-                    <img id="image-5" src="" onerror="this.src='assets/plugins/default/images/image-5.jpg';" alt="image-5">
-                </span>
-                <span style="--i:6;">
-                    <img id="image-6" src="" onerror="this.src='assets/plugins/default/images/image-6.jpg';" alt="image-6">
-                </span>
-                <span style="--i:7;">
-                    <img id="image-7" src="" onerror="this.src='assets/plugins/default/images/image-7.jpg';" alt="image-7">
-                </span>
-                <span style="--i:8;">
-                    <img id="image-8" src="" onerror="this.src='assets/plugins/default/images/image-8.jpg';" alt="image-8">
-                </span>
-            </div>
-
-            
         </div>
     </section>
 
@@ -85,6 +45,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    
     <script src="assets/js/default-script.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
