--- a/gift.html
+++ b/gift.html
@@ -10,27 +10,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
-    <!-- <link rel="stylesheet" href="assets/css/style4.css"> -->
-    <!-- <link rel="stylesheet" href="assets/css/media-query.css"> -->
     <style>
         body {
             background-color: black;
         }
-
-        /* html,
-body {
-    position: relative;
-    height: 100%;
-} */
-
-        /* body {
-    background: black;
-    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-    font-size: 14px;
-    color: #000;
-    margin: 0;
-    padding: 0;
-} */
 
         .swiper {
             width: 100%;
@@ -77,32 +60,32 @@ body {
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide image-section">
+                    <img id="image-1" src="" onerror="this.src='assets/plugins/default/images/image-1.jpg';" alt="image-1">
+                </div>
+                <div class="swiper-slide image-section">
+                    <img id="image-2" src="" onerror="this.src='assets/plugins/default/images/image-2.jpg';" alt="image-2">
+                </div>
+                <div class="swiper-slide image-section">
+                    <img id="image-3" src="" onerror="this.src='assets/plugins/default/images/image-3.jpg';" alt="image-3">
+                </div>
+                <div class="swiper-slide image-section">
+                    <img id="image-4" src="" onerror="this.src='assets/plugins/default/images/image-4.jpg';" alt="image-4">
+                </div>
+                <div class="swiper-slide image-section">
+                    <img id="image-5" src="" onerror="this.src='assets/plugins/default/images/image-5.jpg';" alt="image-5">
+                </div>
+                <div class="swiper-slide image-section">
+                    <img id="image-6" src="" onerror="this.src='assets/plugins/default/images/image-6.jpg';" alt="image-6">
+                </div>
+                <div class="swiper-slide image-section">
+                    <img id="image-7" src="" onerror="this.src='assets/plugins/default/images/image-7.jpg';" alt="image-7">
+                </div>
+                <div class="swiper-slide image-section">
+                    <img id="image-8" src="" onerror="this.src='assets/plugins/default/images/image-8.jpg';" alt="image-8">
+                </div>
+                <!-- <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-2.jpg">
-                </div>
-                <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-3.jpg">
-                </div>
-                <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-5.jpg">
-                </div>
-                <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-6.jpg">
-                </div>
-                <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-2.jpg">
-                </div>
-                <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-3.jpg">
-                </div>
-                <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-5.jpg">
-                </div>
-                <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-6.jpg">
-                </div>
-                <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-2.jpg">
-                </div>
+                </div> -->
             </div>
             <div class="swiper-pagination"></div>
         </div>
@@ -112,7 +95,8 @@ body {
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <!-- <script src="assets/js/script4.js"></script> -->
+    
+    <script src="assets/js/gift-script.js"></script>
 
     <script>
         // swiper script
