--- a/gift.html
+++ b/gift.html
@@ -45,13 +45,41 @@
             border: 6px solid black;
             border-radius: 10px;
         }
+
+        .box-body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+
+        .box {
+            width: 75%;
+            height: auto;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+        }
     </style>
 </head>
 
 <body>
 
+    <div class="box-body" id="loading-progress">
+        <div class="box p-5">
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
+                aria-valuemin="0" aria-valuemax="100" style="height: 2.5vh;">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%">75%</div>
+            </div>
+            <h3 class="text-center m-0 mt-3">Loading...</h3>
+        </div>
+    </div>
+
     <div class="main-section my-5 py-5 mx-3 mx-md-5 px-0 px-md-5 bg-body rounded-4 
-        position-relative">
+        position-relative" id="content" style="display: none;">
         <div style="font-family: 'Courier New', Courier, monospace;color: black;">
             <h1 class="d-flex justify-content-center">Happy Birthday</h1>
             <h2 class="d-flex justify-content-center"><i class="bi bi-cake2"></i></h2>
@@ -60,28 +88,36 @@
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide image-section">
-                    <img id="image-1" src="" onerror="this.src='assets/plugins/default/images/image-1.jpg';" alt="image-1">
+                    <img id="image-1" src="" onerror="this.src='assets/plugins/default/images/image-1.jpg';"
+                        alt="image-1">
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="image-2" src="" onerror="this.src='assets/plugins/default/images/image-2.jpg';" alt="image-2">
+                    <img id="image-2" src="" onerror="this.src='assets/plugins/default/images/image-2.jpg';"
+                        alt="image-2">
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="image-3" src="" onerror="this.src='assets/plugins/default/images/image-3.jpg';" alt="image-3">
+                    <img id="image-3" src="" onerror="this.src='assets/plugins/default/images/image-3.jpg';"
+                        alt="image-3">
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="image-4" src="" onerror="this.src='assets/plugins/default/images/image-4.jpg';" alt="image-4">
+                    <img id="image-4" src="" onerror="this.src='assets/plugins/default/images/image-4.jpg';"
+                        alt="image-4">
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="image-5" src="" onerror="this.src='assets/plugins/default/images/image-5.jpg';" alt="image-5">
+                    <img id="image-5" src="" onerror="this.src='assets/plugins/default/images/image-5.jpg';"
+                        alt="image-5">
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="image-6" src="" onerror="this.src='assets/plugins/default/images/image-6.jpg';" alt="image-6">
+                    <img id="image-6" src="" onerror="this.src='assets/plugins/default/images/image-6.jpg';"
+                        alt="image-6">
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="image-7" src="" onerror="this.src='assets/plugins/default/images/image-7.jpg';" alt="image-7">
+                    <img id="image-7" src="" onerror="this.src='assets/plugins/default/images/image-7.jpg';"
+                        alt="image-7">
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="image-8" src="" onerror="this.src='assets/plugins/default/images/image-8.jpg';" alt="image-8">
+                    <img id="image-8" src="" onerror="this.src='assets/plugins/default/images/image-8.jpg';"
+                        alt="image-8">
                 </div>
                 <!-- <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-2.jpg">
@@ -95,10 +131,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    
+
     <script src="assets/js/gift-script.js"></script>
 
     <script>
+
+        window.addEventListener('load', function () {
+            document.getElementById('loading-progress').style.display = 'none';
+            document.getElementById('content').style.display = 'block';
+        });
+
         // swiper script
         var swiper = new Swiper(".mySwiper", {
             effect: "coverflow",
