--- a/index.html
+++ b/index.html
@@ -13,12 +13,42 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/media-query.css">
+
+    <style>
+        .box-body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+
+        .box {
+            width: 75%;
+            height: auto;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+        }
+    </style>
 </head>
 
 <body>
 
-    <section class="gift-box-section">
-        <h1 class="fw-bold my-4 gift-box-heading" id="giftBoxHeading"></h1>
+    <div class="box-body" id="loading-progress">
+        <div class="box p-5">
+            <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75"
+                aria-valuemin="0" aria-valuemax="100" style="height: 2.5vh;">
+                <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%">75%</div>
+            </div>
+            <h3 class="text-center m-0 mt-3">Loading...</h3>
+        </div>
+    </div>
+
+    <section class="gift-box-section" id="content" style="display: none;">
+        <h1 class="fw-bold text-center my-4 gift-box-heading" id="giftBoxHeading"></h1>
 
         <div class="gift-box-container">
             <div class="gift-box-shadow"></div>
@@ -45,7 +75,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    
+
+    <script>
+        window.addEventListener('load', function () {
+            document.getElementById('loading-progress').style.display = 'none';
+            document.getElementById('content').style.display = 'flex';
+        });
+    </script>
     <script src="assets/js/default-script.js"></script>
     <script src="assets/js/script.js"></script>
 </body>
