--- a/gift.html
+++ b/gift.html
@@ -111,14 +111,15 @@
                     <img id="image-6" src="" onerror="this.src='assets/plugins/default/images/image-6.jpg';"
                         alt="image-6">
                 </div>
-                <div class="swiper-slide image-section">
+                
+                <!-- <div class="swiper-slide image-section">
                     <img id="image-7" src="" onerror="this.src='assets/plugins/default/images/image-7.jpg';"
                         alt="image-7">
-                </div>
-                <div class="swiper-slide image-section">
+                </div> -->
+                <!-- <div class="swiper-slide image-section">
                     <img id="image-8" src="" onerror="this.src='assets/plugins/default/images/image-8.jpg';"
                         alt="image-8">
-                </div>
+                </div> -->
                 <!-- <div class="swiper-slide image-section">
                     <img src="assets/plugins/default/images/image-2.jpg">
                 </div> -->
