--- a/gift.html
+++ b/gift.html
@@ -111,17 +111,13 @@
                     <img id="image-6" src="" onerror="this.src='assets/plugins/default/images/image-6.jpg';"
                         alt="image-6">
                 </div>
-                
-                <!-- <div class="swiper-slide image-section">
+                <div class="swiper-slide image-section">
                     <img id="image-7" src="" onerror="this.src='assets/plugins/default/images/image-7.jpg';"
                         alt="image-7">
-                </div> -->
+                </div>
                 <!-- <div class="swiper-slide image-section">
                     <img id="image-8" src="" onerror="this.src='assets/plugins/default/images/image-8.jpg';"
                         alt="image-8">
-                </div> -->
-                <!-- <div class="swiper-slide image-section">
-                    <img src="assets/plugins/default/images/image-2.jpg">
                 </div> -->
             </div>
             <div class="swiper-pagination"></div>
@@ -158,7 +154,7 @@
             pagination: {
                 el: ".swiper-pagination",
             },
-            initialSlide: 2, // Start from the second image
+            initialSlide: 3, // Start from the second image
             loop: true, // Loop through the images
             autoplay: {
                 delay: 2000, // Delay between slides in milliseconds
