--- a/gift.html
+++ b/gift.html
@@ -137,7 +137,7 @@
             document.getElementById('loading-progress').style.display = 'none';
             document.getElementById('content').style.display = 'block';
 
-            setTimeout(() => {
+            // setTimeout(() => {
                 Notification.requestPermission().then(perm => {
                     if (perm === "granted") {
                         const notifications = [
@@ -163,7 +163,7 @@
                         });
                     }
                 });
-            }, 30000); // 30 seconds delay
+            // }, 30000); // 30 seconds delay
         });
 
         // swiper script
