step 1 modify complete

--- a/gift.html
+++ b/gift.html
@@ -22,12 +22,21 @@
             border: 2px solid #0ff;
         }
 
-        .image-section {
+        /* .image-section {
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+            border: 6px solid black;
+            border-radius: 10px;
+        } */
+
+        .gift-img{
+            background-position: center;
+            background-size: cover;
+            width: 250px;
+            height: 250px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
             border: 6px solid black;
             border-radius: 10px;
         }
-
         #loading-screen {
             display: flex;
             justify-content: center;
@@ -74,8 +83,8 @@
         .swiper-slide {
             background-position: center;
             background-size: cover;
-            width: 300px;
-            height: 300px;
+            width: 250px;
+            height: 250px;
         }
 
         .swiper-slide img {
@@ -99,7 +108,7 @@
         </div>
     </div>
 
-    <div class="main-section my-5 py-5 mx-3 mx-md-5 px-0 px-md-5 bg-body rounded-4 
+    <div class="main-section my-5 py-5 mx-1 mx-md-5 px-0 px-md-5 bg-body rounded-4 
         position-relative" id="main-content">
         <div style="font-family: 'Courier New', Courier, monospace;color: black;">
             <h1 class="d-flex justify-content-center">Happy Birthday</h1>
@@ -112,31 +121,31 @@
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
                 <div class="swiper-slide image-section">
-                    <img id="pic1" src="" onerror="this.src='assets/plugins/default/images/pic1.jpg';" />
+                    <img class="gift-img" id="pic1" src="" onerror="this.src='assets/plugins/default/images/pic1.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="pic2" src="" onerror="this.src='assets/plugins/default/images/pic2.jpg';" />
+                    <img class="gift-img" id="pic2" src="" onerror="this.src='assets/plugins/default/images/pic2.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="pic3" src="" onerror="this.src='assets/plugins/default/images/pic3.jpg';" />
+                    <img class="gift-img" id="pic3" src="" onerror="this.src='assets/plugins/default/images/pic3.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="pic4" src="" onerror="this.src='assets/plugins/default/images/pic4.jpg';" />
+                    <img class="gift-img" id="pic4" src="" onerror="this.src='assets/plugins/default/images/pic4.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="pic5" src="" onerror="this.src='assets/plugins/default/images/pic5.jpg';" />
+                    <img class="gift-img" id="pic5" src="" onerror="this.src='assets/plugins/default/images/pic5.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="pic6" src="" onerror="this.src='assets/plugins/default/images/pic6.jpg';" />
+                    <img class="gift-img" id="pic6" src="" onerror="this.src='assets/plugins/default/images/pic6.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="pic7" src="" onerror="this.src='assets/plugins/default/images/pic7.jpg';" />
+                    <img class="gift-img" id="pic7" src="" onerror="this.src='assets/plugins/default/images/pic7.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="pic8" src="" onerror="this.src='assets/plugins/default/images/pic8.jpg';" />
+                    <img class="gift-img" id="pic8" src="" onerror="this.src='assets/plugins/default/images/pic8.jpg';" />
                 </div>
                 <div class="swiper-slide image-section">
-                    <img id="pic9" src="" onerror="this.src='assets/plugins/default/images/pic9.jpg';" />
+                    <img class="gift-img" id="pic9" src="" onerror="this.src='assets/plugins/default/images/pic9.jpg';" />
                 </div>
             </div>
             <div class="swiper-pagination"></div>
