--- a/gift.html
+++ b/gift.html
@@ -33,9 +33,12 @@
             background-size: cover;
             width: 250px;
             height: 250px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
             border: 6px solid black;
-            border-radius: 10px;
+            border-radius: 10px; */
+            box-shadow: 0 0 20px rgba(0, 0, 0, 1);
+            border: 3px solid #0ff;
+            border-radius: 15px;
         }
         #loading-screen {
             display: flex;
