--- a/old/gift1.html
+++ b/old/gift1.html
@@ -139,7 +139,7 @@
 
             // ***************************************************
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('service-worker.js')
+                navigator.serviceWorker.register('service-worker1.js')
                     .then(function(registration) {
                         console.log('Service Worker registered with scope:', registration.scope);
                         return registration;
