update the style of index and gift main file

--- a/gift.html
+++ b/gift.html
@@ -10,37 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+    <link rel="stylesheet" href="assets/css/gift-style.css">
     <style>
-        body {
-            background-color: black;
-            overflow: hidden;
-            /* Prevent scrolling while loading */
-        }
-
-        .main-section {
-            box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.9);
-            border: 2px solid #0ff;
-        }
-
-        /* .image-section {
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-            border: 6px solid black;
-            border-radius: 10px;
-        } */
-
-        .gift-img {
-            background-position: center;
-            background-size: cover;
-            width: 250px;
-            height: 250px;
-            /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-            border: 6px solid black;
-            border-radius: 10px; */
-            box-shadow: 0 0 20px rgba(0, 0, 0, 1);
-            border: 3px solid #0ff;
-            border-radius: 15px;
-        }
-
         #loading-screen {
             display: flex;
             justify-content: center;
@@ -76,27 +47,6 @@
             border-radius: 10px;
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
         }
-
-        /* swiper */
-        .swiper {
-            width: 100%;
-            padding-top: 50px;
-            padding-bottom: 50px;
-        }
-
-        .swiper-slide {
-            background-position: center;
-            background-size: cover;
-            width: 250px;
-            height: 250px;
-        }
-
-        .swiper-slide img {
-            display: block;
-            width: 100%;
-        }
-
-        /* swiper */
     </style>
 </head>
 
@@ -114,10 +64,12 @@
 
     <div class="main-section my-5 py-5 mx-1 mx-md-5 px-0 px-md-5 bg-body rounded-4 
         position-relative" id="main-content">
-        <div style="font-family: 'Courier New', Courier, monospace;color: black;">
-            <h1 class="d-flex justify-content-center">Happy Birthday</h1>
-            <h2 class="d-flex justify-content-center"><i class="bi bi-cake2"></i></h2>
-            <h1 class="d-flex justify-content-center">My Dear Friend </i></h1>
+        <div class="">
+            <h1 class="d-flex justify-content-center gift-title-text">Happy Birthday</h1>
+            <h2 class="d-flex justify-content-center gift-title">
+                <i class="bi bi-cake2 icon rounded-circle p-3 m-0 d-flex align-items-center"></i>
+            </h2>
+            <h1 class="d-flex justify-content-center gift-title-text">My Dear Friend </i></h1>
         </div>
 
 
